# bastion-cost-engine

./: .gitignore  Dockerfile  README.md  SECURITY_REVIEW.md  pyproject.toml  render.yaml  wsgi.py
src/bastion_cost/: __init__.py  web.py
src/bastion_cost/data/: __init__.py  diy.py  providers.py
src/bastion_cost/engine/: __init__.py  calculator.py  comparison.py  etf.py
static/: builder.js  style.css
templates/: about.html  base.html  builder.html  index.html  results.html
tests/: conftest.py  test_calculator.py  test_comparison.py  test_data_integrity.py  test_etf.py  test_routes.py
